edit ChipExchange UI change to ComboBox edit AccountManager Information to ChildWindow Add ExportStatisticsContentAttribute and IStatisticsContentMetadata
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/CasinovaAll/Silverlights/CasinovaAllStars/Views/StatisticsWindow.xaml
+++ b/src/CasinovaAll/Silverlights/CasinovaAllStars/Views/StatisticsWindow.xaml
@@ -4,7 +4,7 @@
            xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls"
            xmlns:CasinovaAllStars_ViewModels="clr-namespace:CasinovaAllStars.ViewModels" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="CasinovaAllStars.Views.StatisticsWindow"
            Width="600" Height="400" 
-           Title="StatisticsWindow" FontSize="21.333">
+           Title="Games statistics." FontSize="21.333">
 	<controls:ChildWindow.Resources>
 		<CasinovaAllStars_ViewModels:StatisticsViewModel x:Key="StatisticsModelDataSource" d:IsDataSource="True"/>
 		<DataTemplate x:Key="DataTemplate">
