--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/ChipExchange/Views/DepositWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/ChipExchange/Views/DepositWindow.xaml
@@ -2,7 +2,7 @@
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
            xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls"
-           xmlns:TheS_Casinova_ChipExchange_Controls="clr-namespace:TheS.Casinova.ChipExchange.Controls" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="TheS.Casinova.ChipExchange.Views.DepositWindow"
+           xmlns:TheS_Casinova_ChipExchange_Controls="clr-namespace:TheS.Casinova.ChipExchange.Controls" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions" mc:Ignorable="d" x:Class="TheS.Casinova.ChipExchange.Views.DepositWindow"
            Width="600" Height="424" 
            Title="Deposit." FontSize="21.333">
     <Grid x:Name="LayoutRoot" Margin="2">
@@ -26,43 +26,18 @@
     					<Button x:Name="DepositEditButton" Content="Edit" HorizontalAlignment="Right" Width="83" Margin="0,25,8,0" VerticalAlignment="Top" Click="DepositEditButton_Click" />
     					<Image Margin="28,24,0,0" Source="/TheS.Casinova.PlayerAccount.Silverlight;component/Assets/Images/question.png" Stretch="Fill" HorizontalAlignment="Left" Width="23" Height="23" VerticalAlignment="Top" d:LayoutOverrides="Height" ToolTipService.ToolTip="[Description] is one of four rhetorical modes (also known as modes of discourse)." Cursor="Hand"/>
     					<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Pay by" Margin="67,28,0,0" VerticalAlignment="Top" Width="43" TextAlignment="Right" d:LayoutOverrides="VerticalAlignment"/>
-    					<ScrollViewer Margin="8,51,8,8">
-    						<StackPanel>
-    							<Grid Height="58" Width="523">
-    								<Rectangle Fill="#FF5E5E5E" Stroke="Black" Height="17" VerticalAlignment="Top"/>
-    								<Rectangle Fill="White" Stroke="Black" Margin="0,17,0,0"/>
-    								<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Refundable chips" VerticalAlignment="Top" Foreground="White" Margin="8,1,0,0"/>
-    								<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Amount" Margin="67,28,0,0" VerticalAlignment="Top"/>
-    								<Button x:Name="DepositRefundableChipsOKButton" Content="OK" HorizontalAlignment="Right" Width="75" Margin="0,25,8,0" VerticalAlignment="Top"/>
-    								<TextBox x:Name="DepositRefundableChipsAmountTextBox" TextWrapping="Wrap" Text="DepositRefundableChipsAmountTextBox" Margin="114,24,87,10" d:LayoutOverrides="Height"/>
-    								<Image Margin="20,24,0,11" Source="/TheS.Casinova.PlayerAccount.Silverlight;component/Assets/Images/question.png" Stretch="Fill" HorizontalAlignment="Left" Width="23" Height="23" ToolTipService.ToolTip="[Description] is one of four rhetorical modes (also known as modes of discourse)." Cursor="Hand"/>
-    							</Grid>
-    							<Grid VerticalAlignment="Top" Width="523">
-    								<Rectangle Fill="#FF5E5E5E" Stroke="Black" Height="17" VerticalAlignment="Top"/>
-    								<Rectangle Fill="White" Stroke="Black" Margin="0,17,0,0"/>
-    								<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Non-refundable chips" VerticalAlignment="Top" Foreground="White" Margin="8,1,0,0"/>
-    								<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Current Bunus:" Margin="67,28,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
-    								<Button x:Name="DepositNonRefundableChipsOKButton" Content="OK" HorizontalAlignment="Right" Width="75" Margin="0,52,8,0" VerticalAlignment="Top"/>
-    								<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Amount" Margin="67,54,0,0" VerticalAlignment="Top"/>
-    								<TextBlock x:Name="DepositNonRefundableChipsCurrentBonusTextBox" HorizontalAlignment="Left" TextWrapping="Wrap" Text="DepositNonRefundableChipsCurrentBonusTextBox" Margin="164,28,0,0" VerticalAlignment="Top"/>
-    								<TextBox x:Name="DepositNonRefundableChipsAmountTextBox" TextWrapping="Wrap" Text="DepositNonRefundableChipsAmountTextBox" VerticalAlignment="Top" Margin="114,52,87,0"/>
-    								<Image Margin="20,25,0,35" Source="/TheS.Casinova.PlayerAccount.Silverlight;component/Assets/Images/question.png" Stretch="Fill" HorizontalAlignment="Left" Width="23" Height="23" ToolTipService.ToolTip="[Description] is one of four rhetorical modes (also known as modes of discourse)." Cursor="Hand"/>
-    								<Image Margin="20,0,0,8" Source="/TheS.Casinova.PlayerAccount.Silverlight;component/Assets/Images/question.png" Stretch="Fill" HorizontalAlignment="Left" Width="23" Height="23" VerticalAlignment="Bottom" d:LayoutOverrides="Height" ToolTipService.ToolTip="[Description] is one of four rhetorical modes (also known as modes of discourse)." Cursor="Hand"/>
-    							</Grid>
-    							<Grid Height="81" Width="523">
-    								<Rectangle Fill="#FF5E5E5E" Stroke="Black" Height="17" VerticalAlignment="Top"/>
-    								<Rectangle Fill="White" Stroke="Black" Margin="0,17,0,0"/>
-    								<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Gift voucher" VerticalAlignment="Top" Foreground="White" Margin="8,1,0,0"/>
-    								<Button x:Name="DepositGiftVoucherOKButton" Content="OK" HorizontalAlignment="Right" Width="75" Margin="0,53,8,0" VerticalAlignment="Top"/>
-    								<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Code" Margin="67,55,0,0" VerticalAlignment="Top" Width="43" TextAlignment="Right"/>
-    								<TextBox x:Name="DepositGiftVoucherCodeTextBox" TextWrapping="Wrap" Text="DepositGiftVoucherCodeTextBox" VerticalAlignment="Bottom" Margin="114,0,87,5"/>
-    								<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Money" Margin="67,28,0,0" VerticalAlignment="Top" Width="43" TextAlignment="Right"/>
-    								<TextBox x:Name="DepositGiftVoucherMoneyTextBox" TextWrapping="Wrap" Text="DepositGiftVoucherMoneyTextBox" Margin="114,24,87,33" d:LayoutOverrides="Height"/>
-    								<Image Margin="20,24,0,34" Source="/TheS.Casinova.PlayerAccount.Silverlight;component/Assets/Images/question.png" Stretch="Fill" HorizontalAlignment="Left" Width="23" Height="23" ToolTipService.ToolTip="[Description] is one of four rhetorical modes (also known as modes of discourse)." Cursor="Hand"/>
-    								<Image Margin="20,0,0,6" Source="/TheS.Casinova.PlayerAccount.Silverlight;component/Assets/Images/question.png" Stretch="Fill" HorizontalAlignment="Left" Width="23" Height="23" VerticalAlignment="Bottom" d:LayoutOverrides="Height" ToolTipService.ToolTip="[Description] is one of four rhetorical modes (also known as modes of discourse)." Cursor="Hand"/>
-    							</Grid>
-    						</StackPanel>
-    					</ScrollViewer>
+    					<ComboBox x:Name="Menu" VerticalAlignment="Top" Margin="114,51,8,0">
+    						<i:Interaction.Triggers>
+    							<i:EventTrigger EventName="SelectionChanged">
+    								<ei:ChangePropertyAction TargetObject="{Binding ElementName=chipMenuUI}" PropertyName="SelectItem" Value="{Binding SelectedIndex, ElementName=Menu}"/>
+    							</i:EventTrigger>
+    						</i:Interaction.Triggers>
+    					</ComboBox>
+    					<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Menu" Margin="67,53,0,0" VerticalAlignment="Top" Width="43" TextAlignment="Right" d:LayoutOverrides="VerticalAlignment"/>
+    					<Grid Margin="8,75,8,8">
+    						<Rectangle Fill="White" Stroke="Black"/>
+    						<TheS_Casinova_ChipExchange_Controls:ChipMenuUI x:Name="chipMenuUI"/>
+    					</Grid>
     				</Grid>
     			</Grid>
     		</controls:TabItem>
