--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/PlayerAccount/Controls/InformationUI.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/PlayerAccount/Controls/InformationUI.xaml
@@ -28,7 +28,17 @@
     		<Button x:Name="Deposit" Content="Deposit" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="75" Margin="0,0,87,7" Click="InformationDepositButton_Click" />
     	</Grid>
     	<Grid Margin="0,78,0,104">
-    		<ContentPresenter x:Name="AccountInfo"/>
+    		<Grid>
+    			<Rectangle Fill="#FFF4F4F5" Stroke="Black"/>
+
+    			<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Name:" VerticalAlignment="Top" Margin="8,8,0,0" FontWeight="Bold"/>
+    			<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Gender:" Margin="8,0,0,24" FontWeight="Bold" VerticalAlignment="Bottom"/>
+    			<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Email:" Margin="8,28,0,0" FontWeight="Bold" VerticalAlignment="Top" d:LayoutOverrides="VerticalAlignment"/>
+    			<TextBlock x:Name="Gender" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Gender}" VerticalAlignment="Bottom" Margin="61,0,0,24"/>
+    			<TextBlock x:Name="Email" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Email}" Margin="50,28,0,0" VerticalAlignment="Top"/>
+    			<TextBlock x:Name="Name" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Name}" Margin="52,8,0,0" VerticalAlignment="Top"/>
+    			<Button x:Name="EditButton" Content="Edit" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="75" Margin="0,0,8,8" Click="EditButton_Click" />
+    		</Grid>
     	</Grid>
     	<Grid Height="100" VerticalAlignment="Bottom">
     		<sdk:TabControl VerticalAlignment="Top" Height="100">
