Add statistics MEF
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/CasinovaAll/Silverlights/TheS.Casinova.DevilSix.Silverlight/DevilSix/Controls/GameStatisticsUI.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.DevilSix.Silverlight/DevilSix/Controls/GameStatisticsUI.xaml
@@ -13,7 +13,7 @@
 		<Binding Source="{StaticResource GameStatisticsViewModelDataSource}"/>
 	</UserControl.DataContext>
     
-    <Grid x:Name="LayoutRoot" Background="White">
+    <Grid x:Name="LayoutRoot">
     	<VisualStateManager.VisualStateGroups>
     		<VisualStateGroup x:Name="OptionState">
     			<VisualState x:Name="Single"/>
@@ -42,8 +42,8 @@
     		<RowDefinition Height="0.75*"/>
     		<RowDefinition Height="0.1*"/>
     	</Grid.RowDefinitions>
-    	<Button x:Name="GraphButton" Content="Graph" HorizontalAlignment="Right" Width="75" Margin="0,0,8,0" Grid.Row="2" VerticalAlignment="Bottom" Click="GraphButton_Click" />
-    	<Button x:Name="BetDataButton" Content="BetData" Margin="0,0,87,0" HorizontalAlignment="Right" Grid.Row="2" Width="75" VerticalAlignment="Bottom" Click="BetDataButton_Click" />
+    	<Button x:Name="GraphButton" Content="Graph" HorizontalAlignment="Right" Width="75" Grid.Row="2" VerticalAlignment="Bottom" Click="GraphButton_Click" />
+    	<Button x:Name="BetDataButton" Content="BetData" Margin="0,0,79,0" HorizontalAlignment="Right" Grid.Row="2" Width="75" VerticalAlignment="Bottom" Click="BetDataButton_Click" />
     	<sdk:DataGrid x:Name="Contents" Grid.Row="1" Margin="8,0" AutoGenerateColumns="False" ItemsSource="{Binding Informations}" HorizontalAlignment="Center" VerticalAlignment="Center">
     		<sdk:DataGrid.Columns>
     			<sdk:DataGridTextColumn Binding="{Binding Time}" Header="Time"/>
@@ -60,7 +60,7 @@
     			<ColumnDefinition Width="0.27*"/>
     			<ColumnDefinition Width="0.26*"/>
     		</Grid.ColumnDefinitions>
-    		<Button x:Name="OptionButton" Content="Single" Margin="0,0,5,0"/>
+    		<Button x:Name="OptionButton" Content="Single" Margin="0,0,5,0" Click="OptionButton_Click" />
 
     		<sdk:DatePicker x:Name="FirstData" d:LayoutOverrides="Height" Grid.Column="1" SelectedDate="{Binding FirstData}"/>
     		<sdk:DatePicker x:Name="SecondData" d:LayoutOverrides="Height" Grid.Column="3" Visibility="Collapsed" SelectedDate="{Binding SecondData}"/>
