--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Controls/GameStatisticsUI.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Controls/GameStatisticsUI.xaml
@@ -14,7 +14,7 @@
 		<Binding Source="{StaticResource GameStatisticsViewModelDataSource}"/>
 	</UserControl.DataContext>
     
-    <Grid x:Name="LayoutRoot" Background="White">
+    <Grid x:Name="LayoutRoot">
     	<VisualStateManager.VisualStateGroups>
     		<VisualStateGroup x:Name="OptionState">
     			<VisualState x:Name="Single"/>
@@ -46,8 +46,8 @@
     		<RowDefinition Height="0.75*"/>
     		<RowDefinition Height="0.1*"/>
     	</Grid.RowDefinitions>
-    	<Button x:Name="GraphButton" Content="Graph" HorizontalAlignment="Right" Width="75" Margin="0,0,8,0" Grid.Row="2" VerticalAlignment="Bottom" Click="GraphButton_Click" />
-    	<Button x:Name="BetDataButton" Content="BetData" Margin="0,0,87,0" HorizontalAlignment="Right" Grid.Row="2" Width="75" VerticalAlignment="Bottom" Click="BetDataButton_Click" />
+    	<Button x:Name="GraphButton" Content="Graph" HorizontalAlignment="Right" Width="75" Grid.Row="2" VerticalAlignment="Bottom" Click="GraphButton_Click" />
+    	<Button x:Name="BetDataButton" Content="BetData" Margin="0,0,79,0" HorizontalAlignment="Right" Grid.Row="2" Width="75" VerticalAlignment="Bottom" Click="BetDataButton_Click" />
     	<Grid Margin="8" VerticalAlignment="Center">
     		<Grid.ColumnDefinitions>
     			<ColumnDefinition Width="0.15*"/>
@@ -55,7 +55,7 @@
     			<ColumnDefinition Width="0.05*"/>
     			<ColumnDefinition Width="0.4*"/>
     		</Grid.ColumnDefinitions>
-    		<Button x:Name="OptionButton" Content="Single" Margin="0,0,5,0"/>
+    		<Button x:Name="OptionButton" Content="Single" Margin="0,0,5,0" Click="OptionButton_Click" />
 
     		<sdk:DatePicker x:Name="FirstData" d:LayoutOverrides="Height" Grid.Column="1" SelectedDate="{Binding FirstData}"/>
     		<sdk:DatePicker x:Name="SecondData" d:LayoutOverrides="Height" Grid.Column="3" Visibility="Collapsed" SelectedDate="{Binding SecondData}"/>
@@ -65,7 +65,7 @@
     	<StackPanel Margin="200,24,200,0" Grid.Row="1" VerticalAlignment="Top">
     		<TextBlock TextWrapping="Wrap" Text="Winner" TextAlignment="Center" d:LayoutOverrides="GridBox" FontSize="13.333"/>
     		<TextBlock x:Name="Winner" TextWrapping="Wrap" Text="{Binding Winner}" FontSize="21.333" FontWeight="Bold" TextAlignment="Center" TextDecorations="Underline" d:LayoutOverrides="GridBox"/>
-    		<Grid Margin="3">
+    		<Grid Margin="3" HorizontalAlignment="Center">
     			<Rectangle Fill="#FFF4F4F5" Stroke="Black" RadiusX="1" RadiusY="1"/>
     			<Grid Margin="3">
 
