Game Lobby menu แยกการแสดงผลของ Top/Bottom set DataGrids ReadOnly is True
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/CasinovaAll/Silverlights/TheS.Casinova.DevilSix.Silverlight/DevilSix/Controls/GameInformationsUI.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.DevilSix.Silverlight/DevilSix/Controls/GameInformationsUI.xaml
@@ -29,7 +29,7 @@
     		<HyperlinkButton Content="Play" HorizontalAlignment="Left" Foreground="Red" NavigateUri="{Binding GameUri, Mode=OneWay}" d:LayoutOverrides="GridBox"/>
     		<HyperlinkButton x:Name="HowToPlayHyperlinkButton" Content="How to play" Margin="0,0,60,0" Foreground="Red" Click="HowToPlayHyperlinkButton_Click" d:LayoutOverrides="Width, GridBox" />
     	</StackPanel>
-    	<RichTextBox Margin="142,8,8,8" Grid.Row="1">
+    	<RichTextBox Margin="142,8,8,8" Grid.Row="1" IsReadOnly="True">
     		<Paragraph>
     			<Run Text="Game: Devil 6" FontWeight="Bold" FontSize="12"/>
 <LineBreak/><LineBreak/>
