--- a/src/CasinovaAll/Silverlights/TheS.Casinova.MagicNine.Silverlight/MagicNine/Controls/GameStatisticsUI.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.MagicNine.Silverlight/MagicNine/Controls/GameStatisticsUI.xaml
@@ -70,7 +70,7 @@
     		<ComboBox x:Name="Games" d:LayoutOverrides="Height" Grid.Column="4" Margin="4,0,0,0" ItemTemplate="{StaticResource StringTemplate}" ItemsSource="{Binding Games}"/>
 
     	</Grid>
-    	<sdk:DataGrid x:Name="Contents" Grid.Row="1" Margin="8,0" AutoGenerateColumns="False" ItemsSource="{Binding Informations}" HorizontalAlignment="Center" VerticalAlignment="Center">
+    	<sdk:DataGrid x:Name="Contents" Grid.Row="1" Margin="8,0" AutoGenerateColumns="False" ItemsSource="{Binding Informations}" HorizontalAlignment="Center" VerticalAlignment="Center" IsReadOnly="True">
     		<sdk:DataGrid.Columns>
     			<sdk:DataGridTextColumn Binding="{Binding Time}" Header="Time"/>
     			<sdk:DataGridTextColumn Binding="{Binding Round}" Header="Round"/>
