--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/MLN/Controls/DownlineLevelDetailUI.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/MLN/Controls/DownlineLevelDetailUI.xaml
@@ -27,7 +27,7 @@
     	<TextBlock x:Name="AverageIncomePerday" HorizontalAlignment="Right" TextWrapping="Wrap" Text="{Binding IncomePerday}" VerticalAlignment="Top" Margin="0,15,8,0" Width="124"/>
     	<TextBlock x:Name="AverageInclusePerday" HorizontalAlignment="Right" TextWrapping="Wrap" Text="{Binding IncludePerday}" VerticalAlignment="Top" Margin="0,35,8,0" Width="124"/>
 
-    	<sdk:DataGrid x:Name="DownlineDetail" Margin="8,64,8,8" AutoGenerateColumns="False" ItemsSource="{Binding Informations}">
+    	<sdk:DataGrid x:Name="DownlineDetail" Margin="8,64,8,8" AutoGenerateColumns="False" ItemsSource="{Binding Informations}" IsReadOnly="True">
     		<sdk:DataGrid.Columns>
     			<sdk:DataGridTextColumn Binding="{Binding Name}" Header="Name"/>
     			<sdk:DataGridTextColumn Binding="{Binding GroupCount}" Header="GroupCount"/>
