--- a/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TwoWins/Views/HowToPlayWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TwoWins/Views/HowToPlayWindow.xaml
@@ -12,7 +12,7 @@
 
         <Button x:Name="CloseButton" Content="Close" Click="CloseButton_Click" Width="75" Height="23" HorizontalAlignment="Right" Margin="0,12,0,0" Grid.Row="1" FontSize="11" />
         <Grid>
-        	<RichTextBox FontSize="11">
+        	<RichTextBox FontSize="11" IsReadOnly="True">
         		<Paragraph>
         			<Run Text="Game: Two Wins" FontWeight="Bold" FontSize="12"/>
 <LineBreak/><LineBreak/>
