--- a/src/SPerfAll/sPerf_Web/Views/Shared/MasterPage.Master
+++ b/src/SPerfAll/sPerf_Web/Views/Shared/MasterPage.Master
@@ -12,6 +12,8 @@
     <link href="../../Content/jquery.ui.dialog.css" rel="stylesheet" type="text/css" />
     <link href="../../Content/style.css" rel="stylesheet" type="text/css" />
     <link href="../../Content/skin.css" rel="stylesheet" type="text/css" />
+    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
+    <link href="../../Content/jquery.hoverscroll-0.2.2.css" rel="stylesheet" type="text/css" />
     <script src="../../Scripts/jquery-1.4.2.min.js" type="text/javascript"></script>
     <script src="../../Scripts/jquery-ui-1.8.1.custom.js" type="text/javascript"></script>
     <script src="../../Scripts/jquery.pager.js" type="text/javascript"></script>
