--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Views/GameStatisticsWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Views/GameStatisticsWindow.xaml
@@ -2,7 +2,7 @@
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
            xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls"
-           xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:TheS_Casinova_Colors_ViewModels="clr-namespace:TheS.Casinova.Colors.ViewModels" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="TheS.Casinova.Colors.Views.GameStatisticsWindow"
+           xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:TheS_Casinova_Colors_ViewModels="clr-namespace:TheS.Casinova.Colors.ViewModels" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:toolkit="http://schemas.microsoft.com/winfx/2006/xaml/presentation/toolkit" mc:Ignorable="d" x:Class="TheS.Casinova.Colors.Views.GameStatisticsWindow"
            Width="600" Height="400" 
            Title="Colors statistics." FontSize="21.333">
 	<sdk:ChildWindow.Resources>
@@ -37,7 +37,66 @@
         		</Grid>
         	</sdk:TabItem>
         	<sdk:TabItem Header="Graph">
-        		<Grid Background="#FFE5E5E5"/>
+        		<Grid Background="#FFE5E5E5">
+        			<sdk:TabControl>
+        				<sdk:TabItem Header="Bar chart">
+        					<Grid Background="#FFE5E5E5">
+        						<toolkit:Chart Title="{Binding ChartName}" d:LayoutOverrides="Height">
+        							<toolkit:Chart.Axes>
+        								<toolkit:LinearAxis
+        									Orientation="Y"
+        									Location="Left"
+        									Title="POT"
+        									Maximum="{Binding Maximum}"
+        									Interval="{Binding Interval}"
+        									ShowGridLines="True" />
+        								<toolkit:DateTimeAxis Orientation="X" Location="Bottom">
+        									<toolkit:DateTimeAxis.AxisLabelStyle>
+        										<Style TargetType="toolkit:AxisLabel">
+        											<Setter Property="StringFormat">
+        												<Setter.Value>{0:t}</Setter.Value>
+        											</Setter>
+        										</Style>
+        									</toolkit:DateTimeAxis.AxisLabelStyle>
+        								</toolkit:DateTimeAxis>
+        							</toolkit:Chart.Axes>
+        							<toolkit:ColumnSeries 
+        								DependentValueBinding="{Binding Value}"
+        								IndependentValueBinding ="{Binding Key}" 
+        								ItemsSource="{Binding BarInformations}"/>
+        						</toolkit:Chart>
+        					</Grid>
+        				</sdk:TabItem>
+        				<sdk:TabItem Header="Line chart">
+        					<Grid Background="#FFE5E5E5">
+        						<toolkit:Chart Title="{Binding ChartName}" d:LayoutOverrides="Height">
+        							<toolkit:Chart.Axes>
+        								<toolkit:LinearAxis
+        									Orientation="Y"
+        									Location="Left"
+        									Title="POT"
+        									Maximum="{Binding Maximum}"
+        									Interval="{Binding Interval}"
+        									ShowGridLines="True" />
+        								<toolkit:DateTimeAxis Orientation="X" Location="Bottom">
+        									<toolkit:DateTimeAxis.AxisLabelStyle>
+        										<Style TargetType="toolkit:AxisLabel">
+        											<Setter Property="StringFormat">
+        												<Setter.Value>{0:t}</Setter.Value>
+        											</Setter>
+        										</Style>
+        									</toolkit:DateTimeAxis.AxisLabelStyle>
+        								</toolkit:DateTimeAxis>
+        							</toolkit:Chart.Axes>
+        							<toolkit:LineSeries 
+        								DependentValueBinding="{Binding Value}" 
+        								IndependentValueBinding="{Binding Key}" 
+        								ItemsSource="{Binding LineInformations}"/>
+        						</toolkit:Chart>
+        					</Grid>
+        				</sdk:TabItem>
+        			</sdk:TabControl>
+        		</Grid>
         	</sdk:TabItem>
         </sdk:TabControl>
     </Grid>
