--- a/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TwoWins/Views/GameStatisticsWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TwoWins/Views/GameStatisticsWindow.xaml
@@ -1,8 +1,5 @@
-﻿<sdk:ChildWindow
-           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-           xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls"
-           xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:TheS_Casinova_TwoWins_ViewModels="clr-namespace:TheS.Casinova.TwoWins.ViewModels" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="TheS.Casinova.TwoWins.Views.GameStatisticsWindow"
+﻿<sdk:ChildWindow xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:TheS_Casinova_TwoWins_ViewModels="clr-namespace:TheS.Casinova.TwoWins.ViewModels" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:toolkit="http://schemas.microsoft.com/winfx/2006/xaml/presentation/toolkit" x:Class="TheS.Casinova.TwoWins.Views.GameStatisticsWindow"
+           mc:Ignorable="d"
            Width="600" Height="400" 
            Title="Two wins statistics." FontSize="21.333">
 	<sdk:ChildWindow.Resources>
@@ -40,7 +37,66 @@
     			</Grid>
     		</sdk:TabItem>
     		<sdk:TabItem Header="Graph">
-    			<Grid Background="#FFE5E5E5"/>
+    			<Grid Background="#FFE5E5E5">
+    				<sdk:TabControl>
+    					<sdk:TabItem Header="Bar chart">
+    						<Grid Background="#FFE5E5E5">
+    							<toolkit:Chart Title="{Binding ChartName}" d:LayoutOverrides="Height">
+    								<toolkit:ColumnSeries 
+									DependentValueBinding="{Binding Value}"
+									IndependentValueBinding ="{Binding Key}" 
+									ItemsSource="{Binding BarInformations}"/>
+									<toolkit:Chart.Axes>
+										<toolkit:LinearAxis
+										Orientation="Y"
+										Location="Left"
+										Title="POT"
+						                Maximum="{Binding Maximum}"
+						                Interval="{Binding Interval}"
+						                ShowGridLines="True" />
+										<toolkit:DateTimeAxis Orientation="X" Location="Bottom">
+											<toolkit:DateTimeAxis.AxisLabelStyle>
+												<Style TargetType="toolkit:AxisLabel">
+													<Setter Property="StringFormat">
+														<Setter.Value>{0:t}</Setter.Value>
+													</Setter>
+												</Style>
+											</toolkit:DateTimeAxis.AxisLabelStyle>
+										</toolkit:DateTimeAxis>
+									</toolkit:Chart.Axes>
+    							</toolkit:Chart>
+    						</Grid>
+    					</sdk:TabItem>
+    					<sdk:TabItem Header="Line chart">
+    						<Grid Background="#FFE5E5E5">
+    							<toolkit:Chart Title="{Binding ChartName}" d:LayoutOverrides="Height">
+    								<toolkit:LineSeries 
+									DependentValueBinding="{Binding Value}" 
+            						IndependentValueBinding="{Binding Key}" 
+									ItemsSource="{Binding LineInformations}"/>
+									<toolkit:Chart.Axes>
+										<toolkit:LinearAxis
+										Orientation="Y"
+										Location="Left"
+										Title="POT"
+						                Maximum="{Binding Maximum}"
+						                Interval="{Binding Interval}"
+						                ShowGridLines="True" />
+										<toolkit:DateTimeAxis Orientation="X" Location="Bottom">
+											<toolkit:DateTimeAxis.AxisLabelStyle>
+												<Style TargetType="toolkit:AxisLabel">
+													<Setter Property="StringFormat">
+														<Setter.Value>{0:t}</Setter.Value>
+													</Setter>
+												</Style>
+											</toolkit:DateTimeAxis.AxisLabelStyle>
+										</toolkit:DateTimeAxis>
+									</toolkit:Chart.Axes>
+    							</toolkit:Chart>
+    						</Grid>
+    					</sdk:TabItem>
+    				</sdk:TabControl>
+    			</Grid>
     		</sdk:TabItem>
     	</sdk:TabControl>
     </Grid>
