Rename Games Colors, DevilSix, MagicNine, TwoWins  - Change name GameStatisticsChartWindow to StatisticsChartWindow	(Window)  - Change name BetdataViewModel to StatisticsChartViewModel		(ViewModel)
Change GamePlayPageViewModel in game Colors

Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Views/GamePlayPage.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Views/GamePlayPage.xaml
@@ -6,7 +6,7 @@
            Title="Colors GamePlayPage Page" mc:Ignorable="d">
 	<navigation:Page.Resources>
 		<PerfEx_Converter:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
-		<TheS_Casinova_TwoWins_ViewModels:GamePlayPageViewModel x:Key="GamePlayPageViewModelDataSource" d:IsDataSource="True"/>
+		<TheS_Casinova_TwoWins_ViewModels:GamePlayViewModel x:Key="GamePlayPageViewModelDataSource" d:IsDataSource="True"/>
 		<DataTemplate x:Key="GameRoundTemplate">
 			<StackPanel>
 				<TextBlock Text="{Binding Name}"/>
