--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Views/StatisticsChartWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Views/StatisticsChartWindow.xaml
@@ -2,14 +2,14 @@
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
            xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls"
-           xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:TheS_Casinova_Colors_ViewModels="clr-namespace:TheS.Casinova.Colors.ViewModels" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:toolkit="http://schemas.microsoft.com/winfx/2006/xaml/presentation/toolkit" mc:Ignorable="d" x:Class="TheS.Casinova.Colors.Views.GameStatisticsWindow"
+           xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:TheS_Casinova_Colors_ViewModels="clr-namespace:TheS.Casinova.Colors.ViewModels" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:toolkit="http://schemas.microsoft.com/winfx/2006/xaml/presentation/toolkit" mc:Ignorable="d" x:Class="TheS.Casinova.Colors.Views.StatisticsChartWindow"
            Width="600" Height="400" 
-           Title="Colors statistics." FontSize="21.333">
+           Title="Colors statistics chart." FontSize="21.333">
 	<sdk:ChildWindow.Resources>
-		<TheS_Casinova_Colors_ViewModels:BetdataViewModel x:Key="BetdataViewModelDataSource" d:IsDataSource="True"/>
+		<TheS_Casinova_Colors_ViewModels:StatisticsChartViewModel x:Key="StatisticsChartlDataSource" d:IsDataSource="True"/>
 	</sdk:ChildWindow.Resources>
 	<sdk:ChildWindow.DataContext>
-		<Binding Source="{StaticResource BetdataViewModelDataSource}"/>
+		<Binding Source="{StaticResource StatisticsChartlDataSource}"/>
 	</sdk:ChildWindow.DataContext>
     <Grid x:Name="LayoutRoot" Margin="2">
         <Grid.RowDefinitions>
