--- a/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TwoWins/Views/StatisticsChartWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.TwoWins.Silverlight/TwoWins/Views/StatisticsChartWindow.xaml
@@ -1,12 +1,12 @@
-﻿<sdk:ChildWindow xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:TheS_Casinova_TwoWins_ViewModels="clr-namespace:TheS.Casinova.TwoWins.ViewModels" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:toolkit="http://schemas.microsoft.com/winfx/2006/xaml/presentation/toolkit" x:Class="TheS.Casinova.TwoWins.Views.GameStatisticsWindow"
+﻿<sdk:ChildWindow xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls" xmlns:sdk="http://schemas.microsoft.com/winfx/2006/xaml/presentation/sdk" xmlns:TheS_Casinova_TwoWins_ViewModels="clr-namespace:TheS.Casinova.TwoWins.ViewModels" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:toolkit="http://schemas.microsoft.com/winfx/2006/xaml/presentation/toolkit" x:Class="TheS.Casinova.TwoWins.Views.StatisticsChartWindow"
            mc:Ignorable="d"
            Width="600" Height="400" 
            Title="Two wins statistics." FontSize="21.333">
 	<sdk:ChildWindow.Resources>
-		<TheS_Casinova_TwoWins_ViewModels:BetdataViewModel x:Key="BetdataViewModelDataSource" d:IsDataSource="True"/>
+		<TheS_Casinova_TwoWins_ViewModels:StatisticsChartViewModel x:Key="StatisticsChartViewModelDataSource" d:IsDataSource="True"/>
 	</sdk:ChildWindow.Resources>
 	<sdk:ChildWindow.DataContext>
-		<Binding Source="{StaticResource BetdataViewModelDataSource}"/>
+		<Binding Source="{StaticResource StatisticsChartViewModelDataSource}"/>
 	</sdk:ChildWindow.DataContext>
     <Grid x:Name="LayoutRoot" Margin="2">
         <Grid.RowDefinitions>
