--- a/src/SPerfAll/sPerf_Web/Views/Shared/MasterPage.Master
+++ b/src/SPerfAll/sPerf_Web/Views/Shared/MasterPage.Master
@@ -13,6 +13,7 @@
     <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
     <link href="../../Content/galleria.css" rel="stylesheet" type="text/css" />
     <script src="../../Scripts/jquery-1.4.2.min.js" type="text/javascript"></script>
+    <script src="../../Scripts/jquery-ui-1.8.6.custom.min.js" type="text/javascript"></script>
     <script src="../../Scripts/jquery.pager.js" type="text/javascript"></script>
     <script src="../../Scripts/jquery.tmpl.js" type="text/javascript"></script>
     <script src="../../Scripts/ajaxScripts/Start.debug.js" type="text/javascript"></script>
